support doc,excel + search on 1 doc

--- a/app/frontend/Pages/Chat.razor
+++ b/app/frontend/Pages/Chat.razor
@@ -89,6 +89,10 @@
                     </MudItem>
                 </MudGrid>
             </MudItem>
+            <MudItem xs="12" lg="10">
+                <MudTextField @bind-Value="@_sourceFile" Label="Source File"
+                              Placeholder="Enter the source file to search on that only" />
+            </MudItem>
         </MudGrid>
     </MudItem>
     <MudScrollToTop Selector="#answers" 
